# pyroll-byon-lee-wear-model

./: .gitignore  README.md  hatch.toml  pyproject.toml
docs/: docs.tex  refs.bib
pyroll/byon_lee_wear_model/: __init__.py  report.py  roll_pass.py
tests/: test_solve.py  test_solve_byon_lee_paper.py  test_solve_falseround.py  test_solve_imf_semi_continous.py  test_solve_round_oval.py  test_solve_round_oval_falseround.py  test_solve_round_oval_round.py
