[project]
name = "pyroll-byon-lee-wear-model"
description = "Plugin for PyRolL providing the Wear model of Byon and Lee."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" }
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"

dependencies = [
    "pyroll-core ~= 3.0",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Hatch",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Natural Language :: English",
]

dynamic = ["version"]

[project.urls]
Homepage = "https://pyroll.readthedocs.io"

Repository = "https://github.com/pyroll-project/pyroll-byon-lee-wear-model"
Documentation = "https://github.com/pyroll-project/pyroll-byon-lee-wear-model/blob/main/docs/docs.pdf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
